<resources>
    <string name="app_name">ML Nav - Android Sample App</string>

    <string name="location_permission_denied">"Location Permission Denied"</string>

    <string name="navigation_started">"Navigation Started"</string>
    <string name="loading">"Loading…"</string>
    <string name="settings">Settings</string>
    <string name="after">%1$s after %2$dm</string>
    <string name="language_not_supported">Language Not Supported</string>
    <string name="initialization_successfully">Initialization Successful</string>
    <string name="initialization_failed">Initialization Failed</string>
    <string name="user_off_route">"User is off route Navigation Cancelled"</string>
    <string name="distance_km">%.1f km</string>
    <string name="distance_m">%.0f m</string>
    <string name="start">Start</string>
    <string name="avoid">Avoid</string>
    <string name="avoid_tolls">Avoid tolls</string>
    <string name="avoid_motorways">Avoid motorways</string>
    <string name="avoid_ferries">Avoid ferries</string>
    <string name="route_options">Route options</string>
    <string name="fastest_route">Fastest route</string>
    <string name="shortest_route">Shortest route</string>
    <string name="avoid_route_options">Avoid Route options</string>
    <string name="no_route_found">Couldn\'t find a route to the searched place.</string>


</resources>