<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="80dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:background="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avoid_route_options"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:paddingTop="8dp"
        android:layout_marginTop="8dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_tolls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avoid_tolls"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_motorways"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/avoid_motorways"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_ferries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/avoid_ferries"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/route_options"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:paddingTop="16dp"/>

    <RadioGroup
        android:id="@+id/route_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fastest"
            android:textColor="@color/black"
            android:checked="true"
            android:text="@string/fastest_route"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shortest"
            android:textColor="@color/black"
            android:text="@string/shortest_route"
            android:textSize="18sp"/>
    </RadioGroup>
</LinearLayout>
